// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The NavBar component when userIsAdmin is set to false should render properly 1`] = `
<nav
  className="navbar navbar-inverse"
>
  <div
    className="container"
  >
    <div
      className="navbar-header"
    >
      <span
        className="navbar-brand  active"
        href="/"
        onClick={[Function]}
        style={Object {}}
      >
        Gladtime Audio
      </span>
      <button
        className="navbar-toggle collapsed"
        onClick={[Function]}
        type="button"
      >
        <span
          className="sr-only"
        >
          Toggle navigation
        </span>
        <span
          className="icon-bar"
        />
        <span
          className="icon-bar"
        />
        <span
          className="icon-bar"
        />
      </button>
    </div>
    <div
      aria-expanded={null}
      className="navbar-collapse collapse"
    >
      <ul
        className="nav navbar-nav navbar-right"
        role={null}
      >
        <li
          className=""
          role="presentation"
          style={undefined}
        >
          <a
            href="#"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="button"
          >
            <button
              className="auth-btn btn btn-primary"
              disabled={false}
              onClick={undefined}
              type="button"
            >
              Login
            </button>
          </a>
        </li>
      </ul>
    </div>
  </div>
</nav>
`;

exports[`The NavBar component when userIsAdmin is set to null should render properly 1`] = `
<nav
  className="navbar navbar-inverse"
>
  <div
    className="container"
  >
    <div
      className="navbar-header"
    >
      <span
        className="navbar-brand  active"
        href="/"
        onClick={[Function]}
        style={Object {}}
      >
        Gladtime Audio
      </span>
      <button
        className="navbar-toggle collapsed"
        onClick={[Function]}
        type="button"
      >
        <span
          className="sr-only"
        >
          Toggle navigation
        </span>
        <span
          className="icon-bar"
        />
        <span
          className="icon-bar"
        />
        <span
          className="icon-bar"
        />
      </button>
    </div>
    <div
      aria-expanded={null}
      className="navbar-collapse collapse"
    />
  </div>
</nav>
`;

exports[`The NavBar component when userIsAdmin is set to true should render properly 1`] = `
<nav
  className="navbar navbar-inverse"
>
  <div
    className="container"
  >
    <div
      className="navbar-header"
    >
      <span
        className="navbar-brand  active"
        href="/"
        onClick={[Function]}
        style={Object {}}
      >
        Gladtime Audio
      </span>
      <button
        className="navbar-toggle collapsed"
        onClick={[Function]}
        type="button"
      >
        <span
          className="sr-only"
        >
          Toggle navigation
        </span>
        <span
          className="icon-bar"
        />
        <span
          className="icon-bar"
        />
        <span
          className="icon-bar"
        />
      </button>
    </div>
    <div
      aria-expanded={null}
      className="navbar-collapse collapse"
    >
      <ul
        className="nav navbar-nav"
        role={null}
      >
        <li
          className=""
          role="presentation"
          style={undefined}
        >
          <a
            href="/calendar"
            onClick={[Function]}
            onKeyDown={[Function]}
          >
            Calendar
          </a>
        </li>
        <li
          className=""
          role="presentation"
          style={undefined}
        >
          <a
            href="/budget"
            onClick={[Function]}
            onKeyDown={[Function]}
          >
            Budget
          </a>
        </li>
        <li
          className=""
          role="presentation"
          style={undefined}
        >
          <a
            href="/expenses"
            onClick={[Function]}
            onKeyDown={[Function]}
          >
            Expenses
          </a>
        </li>
      </ul>
      <ul
        className="nav navbar-nav navbar-right"
        role={null}
      >
        <li
          className=""
          role="presentation"
          style={undefined}
        >
          <a
            href="#"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="button"
          >
            <button
              className="auth-btn btn btn-primary"
              disabled={false}
              onClick={undefined}
              type="button"
            >
              Logout
            </button>
          </a>
        </li>
      </ul>
    </div>
  </div>
</nav>
`;
